Add Config Import Review Process
Update WIMUtil Feature Icons & Localization

Update Build-and-Package script for WinUI3

--- a/src/Winhance.WPF/Localization/en.json
+++ b/src/Winhance.WPF/Localization/en.json
@@ -1131,20 +1131,16 @@
   "WIMUtil_Card_ConvertImage_Button_Dynamic": "Convert to {0}",
   "Startup_Backup_Title": "System Protection Enabled",
   "Startup_Backup_SubTitle": "Winhance Backup",
-  "Startup_Backup_Intro": "Winhance has protected your system with backups.",
-  "Startup_Backup_RestoreEnabled": "System Restore was disabled and is now enabled.",
-  "Startup_Backup_Created": "Created:",
-  "Startup_Backup_RegistryBackups": "• Registry backups ({0} hives) at:",
-  "Startup_Backup_RegistryPath": "  C:\\ProgramData\\Winhance\\Backups",
-  "Startup_Backup_RestorePoint": "• System Restore Point: \u0027Winhance Initial Restore Point\u0027",
-  "Startup_Backup_ToRestore": "To restore:",
-  "Startup_Backup_RestoreInstructions_System": "• System: Open \u0027Create a restore point\u0027 in Settings \u003e System Restore",
-  "Startup_Backup_RestoreInstructions_Registry": "• Registry: Double-click .reg files in the backup folder",
-  "Startup_Backup_RestoreInstructions_RestoreOnly": "To restore: Search \u0027restore point\u0027 in Windows Settings",
-  "Startup_Backup_RestoreInstructions_RegistryOnly": "To restore: Double-click .reg files in the backup folder",
-  "Startup_Backup_Note": "Note: System Restore won\u0027t restore removed apps.",
-  "Startup_Backup_Note_AdminRights": "Registry backups are one-time and require admin rights.",
-  "Startup_Backup_Checkbox_DontCreate": "Don\u0027t create restore points in the future",
+  "Startup_Backup_Intro": "Winhance has protected your system before making any changes.",
+  "Startup_Backup_RestoreEnabled": "System Restore was disabled and has been enabled.",
+  "Startup_Backup_Created": "The following backups were created:",
+  "Startup_Backup_RestorePoint": "\u2022 System Restore Point: \u0027Winhance Initial Restore Point\u0027",
+  "Startup_Backup_ConfigBackup": "\u2022 Configuration Backup: A snapshot of your current Windows settings",
+  "Startup_Backup_ToRestore": "To undo changes made by Winhance:",
+  "Startup_Backup_RestoreInstructions_RestorePoint": "\u2022 System Restore: Search \u0027Create a restore point\u0027 in Windows Settings",
+  "Startup_Backup_RestoreInstructions_ConfigBackup": "\u2022 Backup Config: Use Import Config in the title bar and select \u0027Import Backup Config\u0027",
+  "Startup_Backup_Note": "Note: System Restore will undo system-level changes. The backup config will restore your Windows settings to their original values.",
+  "Startup_Backup_Checkbox_DontCreate": "Don\u0027t create restore points or backup configs in the future",
   "Startup_Backup_Checkbox_DontShow": "Don\u0027t show this again",
   "Startup_Migration_Title": "Script Location Updated",
   "Startup_Migration_SubTitle": "Winhance Migration",
