--- a/src/Winhance.UI/Features/Common/Localization/en.json
+++ b/src/Winhance.UI/Features/Common/Localization/en.json
@@ -1,4 +1,4 @@
-﻿{
+{
   "App_Title": "Winhance",
   "App_By": "by Memory",
   "Nav_SoftwareAndApps": "Software \u0026 Apps",
@@ -20,7 +20,9 @@
   "Tooltip_ToggleTheme": "Toggle Winhance Theme",
   "Tooltip_Donate": "Donate to Support Development",
   "Tooltip_ReportBug": "Report a Bug",
+  "Tooltip_Documentation": "Documentation",
   "Menu_ReportBug": "Report a Bug",
+  "Menu_Documentation": "Documentation",
   "Settings_Title": "Winhance Settings",
   "Settings_Menu_Language": "Language",
   "Settings_Language_Description": "Select the application display language",
@@ -76,6 +78,10 @@
   "Dialog_ImportConfig_Option_Own_Description": "Select a configuration file from your computer",
   "Dialog_ImportConfig_Option_Recommended_Title": "Import recommended config",
   "Dialog_ImportConfig_Option_Recommended_Description": "Load Winhance\u0027s recommended config file",
+  "Dialog_ImportConfig_Option_Backup_Title": "Import backup config",
+  "Dialog_ImportConfig_Option_Backup_Description": "Restore your system backup configuration",
+  "Dialog_ImportConfig_Option_Defaults_Title": "Restore Windows defaults",
+  "Dialog_ImportConfig_Option_Defaults_Description": "Reset all settings to Windows factory defaults",
   "Dialog_ImportOptions_Title": "Import Configuration",
   "Dialog_ImportOptions_Message": "Choose how you would like to import a configuration:",
   "ImportOption_Own": "Import my own configuration file",
@@ -122,6 +128,45 @@
   "Config_Import_Success_Message": "Your configuration has been applied successfully.",
   "Config_Import_Error_NoSelection": "Please select at least one section to import.",
   "Config_Import_Error_NoSelection_Title": "No Sections Selected",
+  "Loading_CreatingConfigBackup": "Creating configuration backup...",
+  "Config_Import_Page_Title": "Import Configuration",
+  "Config_Import_Page_Description": "Select which settings from the config file you want to apply to your computer.",
+  "Config_Import_ReviewBeforeApplying": "Review app selections before processing",
+  "Config_Import_ReviewBeforeApplying_Description": "Apps will be loaded into Software \u0026 Apps for review instead of being processed immediately",
+  "Config_Import_Apply": "Apply",
+  "Config_Import_Overlay_Title": "Applying Configuration",
+  "Config_Import_Overlay_PleaseWait": "Please wait while your settings are being applied...",
+  "Config_Import_Log_Success": "Configuration applied successfully",
+  "Config_Import_Log_Failed": "Configuration application failed",
+  "Config_Backup_NotFound": "No backup configuration files were found. A backup is automatically created on first app launch.",
+  "Config_Backup_NotFound_Title": "No Backup Found",
+  "Config_Backup_Select_Title": "Select Backup File",
+  "Review_Mode_Title": "Config Review Mode",
+  "Review_Mode_Description": "Review the changes across all sections, then click Apply Config when ready.",
+  "Review_Mode_Status_Format": "{0} of {1} reviewed ({2} will be applied)",
+  "Review_Mode_Status_Initial": "Navigate to each section to review changes",
+  "Review_Mode_Apply_Button": "Apply Config",
+  "Review_Mode_Cancel_Button": "Cancel",
+  "Review_Mode_Cancel_Confirmation_Title": "Cancel Config Review",
+  "Review_Mode_Cancel_Confirmation": "Are you sure you want to cancel? No changes will be applied.",
+  "Review_Mode_Diff_Toggle": "Current: {0} \u2192 Config: {1}",
+  "Review_Mode_Diff_Selection": "Current: {0} \u2192 Config: {1}",
+  "Review_Mode_Diff_Numeric": "Current: {0} \u2192 Config: {1}",
+  "Review_Mode_Apply_Change": "Apply",
+  "Review_Mode_Reject_Change": "Don't apply",
+  "Review_Mode_Select_Action": "Select an action (Install or Uninstall) for checked apps using the buttons above",
+  "Review_Mode_Action_Install": "Checked apps will be installed when you apply the config",
+  "Review_Mode_Action_Remove": "Checked apps will be removed when you apply the config",
+  "Review_Mode_WindowsApps_Banner": "Checked apps will be removed when you apply the config. Uncheck any you want to keep.",
+  "Review_Mode_ExternalApps_Banner": "Checked apps will be installed when you apply the config. Uncheck any you don\u0027t want.",
+  "Review_Mode_Skip_Checkbox": "Skip review and apply immediately",
+  "Review_Mode_No_Changes_Title": "No Changes Detected",
+  "Review_Mode_No_Changes_Message": "The selected configuration matches your current system settings. There are no changes to review.",
+  "Review_Mode_Status_AllMatch": "All settings already match config",
+  "Review_Mode_Status_NoItems": "No configuration items to apply",
+  "Review_Mode_Action_ThemeWallpaper": "Apply the default wallpaper for this theme?",
+  "Review_Mode_Action_CleanTaskbar": "Clean the taskbar as part of this configuration?",
+  "Review_Mode_Action_CleanStartMenu": "Clean the start menu as part of this configuration?",
   "Button_OK": "OK",
   "Button_Cancel": "Cancel",
   "Button_Continue": "Continue",
@@ -1015,7 +1060,6 @@
   "ExternalApps_Category_PrivacySecurity": "Privacy \u0026 Security",
   "ExternalApps_Category_RemoteAccess": "Remote Access",
   "ExternalApps_Category_RuntimesDependencies": "Runtimes \u0026 Dependencies",
-  "ExternalApps_WinGetUnavailable": "Unable to determine installation status. Connect to internet and click Refresh button.",
   "Error_NoInternetConnection": "No internet connection. Please connect and try again.",
   "Error_WinGetInstallFailed": "Failed to install WinGet. Please check your internet connection.",
   "Error_WinGetNotAvailable": "WinGet is not available on this system.",
@@ -1160,20 +1204,16 @@
   "WIMUtil_Card_ConvertImage_Button_Dynamic": "Convert to {0}",
   "Startup_Backup_Title": "System Protection Enabled",
   "Startup_Backup_SubTitle": "Winhance Backup",
-  "Startup_Backup_Intro": "Winhance has protected your system with backups.",
-  "Startup_Backup_RestoreEnabled": "System Restore was disabled and is now enabled.",
-  "Startup_Backup_Created": "Created:",
-  "Startup_Backup_RegistryBackups": "• Registry backups ({0} hives) at:",
-  "Startup_Backup_RegistryPath": "  C:\\ProgramData\\Winhance\\Backups",
-  "Startup_Backup_RestorePoint": "• System Restore Point: \u0027Winhance Initial Restore Point\u0027",
-  "Startup_Backup_ToRestore": "To restore:",
-  "Startup_Backup_RestoreInstructions_System": "• System: Open \u0027Create a restore point\u0027 in Settings \u003e System Restore",
-  "Startup_Backup_RestoreInstructions_Registry": "• Registry: Double-click .reg files in the backup folder",
-  "Startup_Backup_RestoreInstructions_RestoreOnly": "To restore: Search \u0027restore point\u0027 in Windows Settings",
-  "Startup_Backup_RestoreInstructions_RegistryOnly": "To restore: Double-click .reg files in the backup folder",
-  "Startup_Backup_Note": "Note: System Restore won\u0027t restore removed apps.",
-  "Startup_Backup_Note_AdminRights": "Registry backups are one-time and require admin rights.",
-  "Startup_Backup_Checkbox_DontCreate": "Don\u0027t create restore points in the future",
+  "Startup_Backup_Intro": "Winhance has protected your system before making any changes.",
+  "Startup_Backup_RestoreEnabled": "System Restore was disabled and has been enabled.",
+  "Startup_Backup_Created": "The following backups were created:",
+  "Startup_Backup_RestorePoint": "\u2022 System Restore Point: \u0027Winhance Initial Restore Point\u0027",
+  "Startup_Backup_ConfigBackup": "\u2022 Configuration Backup: A snapshot of your current Windows settings",
+  "Startup_Backup_ToRestore": "To undo changes made by Winhance:",
+  "Startup_Backup_RestoreInstructions_RestorePoint": "\u2022 System Restore: Search \u0027Create a restore point\u0027 in Windows Settings",
+  "Startup_Backup_RestoreInstructions_ConfigBackup": "\u2022 Backup Config: Use Import Config in the title bar and select \u0027Import Backup Config\u0027",
+  "Startup_Backup_Note": "Note: System Restore will undo system-level changes. The backup config will restore your Windows settings to their original values.",
+  "Startup_Backup_Checkbox_DontCreate": "Don\u0027t create restore points or backup configs in the future",
   "Startup_Backup_Checkbox_DontShow": "Don\u0027t show this again",
   "Startup_Migration_Title": "Script Location Updated",
   "Startup_Migration_SubTitle": "Winhance Migration",
@@ -1205,6 +1245,8 @@
   "Help_ExternalApps_Content": "Select the item(s) you want to install and click on the \u0027Install Selected Items\u0027 button to start the installation.\n\nUse the Search Box to find items quickly.\nThe Save and Import Config buttons in the main window help you manage your preferred selections.\n\nTip: Install UniGetUI from the \u0027Other Utilities\u0027 group if you require a Software Manager as Winhance only provides external app installations, not updates and management.",
   "Help_WinhanceStatus": "Winhance Status:",
   "Help_CloseHelp": "Close Help",
+  "Help_LearnMore_WindowsApps": "Learn more about Windows Apps",
+  "Help_LearnMore_ExternalApps": "Learn more about External Apps",
   "Status_Initializing": "Initializing...",
   "Status_PleaseWait": "Please wait while the application loads...",
   "Status_DiscoveringApps": "Discovering available applications...",
@@ -1298,6 +1340,19 @@
   "WIMUtil_FolderDialog_SelectExtracted": "Select folder with extracted ISO contents",
   "WIMUtil_FolderDialog_SelectWorkDir": "Select a working directory to extract the ISO",
   "WIMUtil_FolderDialog_SelectDrivers": "Select folder containing drivers",
+  "WIMUtil_Tooltip_DownloadWindows10": "Download Windows 10 ISO",
+  "WIMUtil_Tooltip_DownloadWindows11": "Download Windows 11 ISO",
+  "WIMUtil_Tooltip_Schneegans": "Open Schneegans XML Generator",
+  "WIMUtil_Card_SelectDirectory_Description_Default": "Default: {0}",
+  "WIMUtil_Msg_DeleteWimConfirm": "Are you sure you want to delete the WIM image file? This action cannot be undone.",
+  "WIMUtil_Msg_DeleteEsdConfirm": "Are you sure you want to delete the ESD image file? This action cannot be undone.",
+  "WIMUtil_Msg_DeleteWimSuccess": "WIM file deleted successfully.",
+  "WIMUtil_Msg_DeleteEsdSuccess": "ESD file deleted successfully.",
+  "WIMUtil_Msg_DeleteFailed": "Failed to delete the image file.",
+  "WIMUtil_Msg_DeleteError": "Error deleting image file: {0}",
+  "WIMUtil_Status_ConvertingToFormat": "Converting {0} to {1}...",
+  "WIMUtil_Status_CreatingIso": "Creating ISO",
+  "WIMUtil_Button_OpenFolder": "Open Folder",
   "AdvancedTools_FileDialog_SaveXml": "Save Autounattend XML File",
   "AdvancedTools_Msg_InvalidFilename": "The file must be named \u0027autounattend.xml\u0027 to work properly with Windows installation.\n\nPlease save the file with the exact name: autounattend.xml",
   "AdvancedTools_Msg_XmlGenSuccess": "Your autounattend.xml file has been created!\n\nLocation: {0}\n\nNext steps:\n1. Use the WIMUtil feature to add this file to a Windows ISO\n2. Or manually copy it to the root of your Windows installation media\n3. Install Windows using the modified media\n\nWould you like to use the WIMUtil to create a Windows installation ISO with this file now?",
@@ -1476,8 +1531,9 @@
   "Setting_taskbar-copilot_Description": "Show or hide the Copilot Preview button on the taskbar",
   "App_Tagline": "Enhance Your Windows Experience",
   "Loading_InitializingSettings": "Initializing settings...",
+  "Loading_CheckingSystemProtection": "Checking system protection...",
   "Loading_CreatingRestorePoint": "Creating system restore point. Please wait, this might take a while...",
   "Loading_MigratingScripts": "Migrating scripts...",
   "Loading_CheckingScripts": "Checking for script updates...",
-  "Loading_PreparingApp": "Preparing application..."
+  "Loading_PreparingApp": "Loading apps and checking installation status..."
 }
